--- a/Website/styles.css
+++ b/Website/styles.css
@@ -1,35 +1,52 @@
 body {
     font-family: Roboto, Arial;
-    background-color: rgb(41, 41, 41);
-    color: rgb(225, 225, 225);
+    background-color: rgb(47, 47, 47);
+    color: rgb(255, 255, 255);
 }
 
-.title {
-    cursor: default;
+/*
+TOP BAR
+*/
+.topbar {
+    display: flex;
+
+    align-items: center;
+
+    position: relative;
+
+    height: 10vh;
+    padding-top: 0.6rem;
+    width: 100%;
+    height: 80px;
+    margin-top: 0;
+
+    border-radius: 6px;
+    border: 3px solid #626262;
+}
+
+.title_image {
+    cursor: pointer;
+    width: 10vh;
+    border-radius: 160px;
+    margin-bottom: 10px;
+}
+
+/*
+STUFF STYLES
+*/
+.link {
+    margin: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: large;
+    color: #fff;
+    user-select: none;
+
+    transition: all, 0.30s;
+}
+
+.link:hover {
     color: rgb(6, 95, 212);
-    display: block;
-    width: fit-content;
-    
-    border-radius: 5px;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    padding-left: 16px;
-    padding-right: 16px;
-    transition: box-shadow 0.15s;
-    transition: outline-offset 0.15s;
-}
-
-.title:hover {
-    color: rgb(6, 95, 212); 
-    display: block;
-    width: fit-content;
-
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.30);
-    
-    outline-style: solid;
-    outline-color: invert;
-    outline-offset: 10px;
 }
 
 .button {
@@ -37,7 +54,7 @@ body {
     font-size: medium;
     border-style: solid;
     color: rgb(6, 95, 212);
-    border-color: rgb(6, 95, 212); 
+    border-color: rgb(6, 95, 212);
     background-color: rgb(25, 25, 25);
     border-radius: 6px;
     padding-top: 9px;
@@ -48,19 +65,61 @@ body {
     margin-bottom: 10px;
     transition: all, 0.30s;
     font-weight: bold;
-    
+
     display: inline-block;
     vertical-align: bottom;
 }
 
 .button:hover {
     color: rgb(53, 53, 53);
-    border-color: rgb(53, 53, 53); 
+    border-color: rgb(53, 53, 53);
     background-color: rgb(6, 95, 212);
     border-radius: 20px;
     transition: all, 0.30s;
 }
 
+/*
+TITLE
+*/
+.title {
+    cursor: pointer;
+    user-select: none;
+
+    color: rgb(6, 95, 212);
+    display: block;
+    width: fit-content;
+
+    text-decoration: none;
+    border-radius: 5px;
+    padding-bottom: 5px;
+
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+
+    padding-left: 8px;
+    padding-right: 8px;
+
+    transition: box-shadow 0.15s;
+    transition: outline-offset 0.15s;
+}
+
+.title:hover {
+    color: rgb(6, 95, 212);
+    display: block;
+    width: fit-content;
+
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.30);
+
+    outline-style: solid;
+    outline-color: invert;
+    outline-offset: 10px;
+}
+
+/*
+ENTRIES LIST
+*/
 .entry-drop {
     user-select: none;
     cursor: pointer;
@@ -79,13 +138,13 @@ body {
     width: fit-content;
     background-color: rgb(25, 25, 25);
     border-radius: 5px;
-    
+
     margin-top: 5px;
 }
 
 .entry-drop:active {
     background-color: rgb(13, 13, 13);
-    
+
     margin-top: 20px;
     transition: margin-top, 0.1s;
 }
@@ -95,39 +154,10 @@ body {
     border: 1px solid #007bff;
 }
 
-.dc-add {
-    cursor: pointer;
-    font-size: medium;
-    border-style: solid;
-    color: rgb(19, 184, 74); 
-    border-color: rgb(19, 184, 74); 
-    background-color: rgb(25, 25, 25);
-    border-radius: 6px;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    transition: all, 0.30s;
-    font-weight: bold;
-    
-    display: inline-block;
-    vertical-align: bottom;
-}
-
-.dc-add:hover {
-    color: rgb(53, 53, 53);
-    border-color: rgb(53, 53, 53); 
-    background-color: rgb(19, 184, 74); 
-    border-radius: 20px;
-    transition: all, 0.30s;
-}
-
 .entry {
     cursor: default;
     user-select: none;
-    color: rgb(190, 190, 190); 
+    color: rgb(190, 190, 190);
     background-color: rgb(31, 31, 31);
     border-radius: 6px;
     text-align: left;
@@ -136,14 +166,13 @@ body {
     padding-bottom: 9px;
     padding-left: 16px;
     padding-right: 16px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
 
     transition: all, 0.30s;
     font-weight: bold;
     width: fit-content;
-    
-    display: block;
+
+    display: inline-block;
 }
 
 .entry:hover {
@@ -162,12 +191,15 @@ body {
     margin-left: 20px;
 }
 
+/*
+ENTRIES
+*/
 .indietro {
     cursor: pointer;
     font-size: medium;
     border-style: solid;
     color: rgb(6, 95, 212);
-    border-color: rgb(6, 95, 212); 
+    border-color: rgb(6, 95, 212);
     background-color: rgb(25, 25, 25);
 
     border-radius: 6px;
@@ -180,17 +212,19 @@ body {
     margin-left: 10px;
     transition: all, 0.30s;
     font-weight: bold;
-    
+
     display: inline-block;
     vertical-align: bottom;
     position: fixed;
-    position: absolute; /* Set the position to absolute */
-    top: 0; /* Align the element to the bottom of the page */
+    position: absolute;
+    /* Set the position to absolute */
+    top: 0;
+    /* Align the element to the bottom of the page */
 }
 
 .indietro:hover {
     color: rgb(53, 53, 53);
-    border-color: rgb(53, 53, 53); 
+    border-color: rgb(53, 53, 53);
     background-color: rgb(6, 95, 212);
     border-radius: 20px;
     transition: all, 0.30s;
@@ -212,7 +246,7 @@ body {
     margin-bottom: 10px;
     transition: all, 0.30s;
     font-weight: bold;
-    
+
     display: inline-block;
     vertical-align: bottom;
     width: 100%;
@@ -220,27 +254,11 @@ body {
 
 .vai:hover {
     color: rgb(53, 53, 53);
-    border-color: rgb(53, 53, 53); 
+    border-color: rgb(53, 53, 53);
     background-color: rgb(51, 158, 51);
     border-radius: 20px;
     transition: all, 0.30s;
 }
-
-.link {
-    color: rgb(225, 225, 225);
-    text-decoration: none;
-    line-height: 25px;
-    background-color: (190, 190, 190); 
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.30);
-    font-size: large;
-}
-
-.link:hover {
-    color: rgb(197, 200, 219);
-    transition: all, 0.10s;
-    border: 2px solid #ccc;
-}
-  
 
 .lista {
     width: 20%;
@@ -261,7 +279,7 @@ _______________________
     color: rgb(6, 95, 212);
     display: inline-block;
     width: fit-content;
-    
+
     border-radius: 5px;
     padding-top: 9px;
     padding-bottom: 9px;
@@ -272,25 +290,27 @@ _______________________
 }
 
 .title-sis-nervs:hover {
-    color: rgb(6, 95, 212); 
+    color: rgb(6, 95, 212);
     width: fit-content;
 
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.30);
-    
+
     outline-style: solid;
     outline-color: invert;
     outline-offset: 10px;
 }
 
 .nervs-lista1 {
-    width: 15%; /* Adjust as needed */
+    width: 15%;
+    /* Adjust as needed */
     font-size: medium;
     text-align: left;
 }
 
 .nervs-lista2 {
-    width: 15%; /* Adjust as needed */
+    width: 15%;
+    /* Adjust as needed */
     font-size: medium;
     text-align: left;
 }
